--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-API_URL = "https://api.tideup.croonus.com/api/v1/b2c/"
+API_URL = "https://api.tiedup.croonus.com/api/v1/b2c/"
 NAME = "Croonus"
 PIB = "111178213"
 ADDRESS = "Kralja Petra I 30, 32000 Čačak"
