--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "template-fashion",
+  "name": "tied-up",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3005",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 3005",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
