dodati i linkovani logotipi za banku

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 API_URL = "https://api.tiedup.croonus.com/api/v1/b2c/"
-NAME = "Croonus"
+NAME = "Tied Up"
 PIB = "111178213"
 ADDRESS = "Prvoslava Stojanovića 4, 34000 Kragujevac"
 TELEPHONE = "+381 63 11 23 988"
