--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "rsuite": "^5.32.0",
     "sharp": "^0.32.6",
     "swiper": "9.3.0",
-    "three": "^0.155.0"
+    "three": "^0.155.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
